# ai-agent-hack

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/rules/: style_ts.mdc
.github/: dependabot.yaml
.github/workflows/: ci-backend-cleanup.yaml  ci-backend.yaml  ci-preview-cleanup.yaml  ci-preview.yaml  ci-web.yaml  deploy-functions.yaml  discord-pr-notification.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.scripts/: gen_openapi.sh
ai/: .gitignore  Dockerfile  README.md  codebuild.yaml  inference.py  main.py  model.py  pyproject.toml
ai/src/: inference.py  main.py  server.py
ai/src/model/: inference.py  load.py
backend/: .env.local  .env.sample  Dockerfile  Dockerfile.preview.api  Dockerfile.preview.db  README.md  compose.yaml  drizzle.config.auth.ts  drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/.scripts/: init-dbs.sh  wait_for_postgres.sh
backend/sql/: 00_init_db.sh
backend/src/: auth.ts  env.ts  firebase.ts  logger.ts  main.ts  openapi-spec.ts  openapiSpec.ts
firebase/: .gitignore  firebase.json
web/: .env.local.sample  .env.sample  .firebaserc  .gitignore  .prettierignore  Dockerfile.preview.web  README.md  apphosting.yaml  biome.json  components.json  compose.yaml  eslint.config.mjs  firebase.json  generate-openapi-types.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/public/: privacy-policy.md  terms-of-service.md
web/src/: api-client.ts  api.ts  (+6 more)
(+243 files in other folders)
